misc: code cleanup

--- a/lovely.toml
+++ b/lovely.toml
@@ -18,7 +18,7 @@ target = "engine/controller.lua"
 pattern = 'if key == "p" then'
 position = "before"
 payload = '''
-local debugplus = require("debugplus")
+local debugplus = require("debugplus-core")
 debugplus.handleKeys(self, key, dt)
 '''
 match_indent = true
@@ -30,7 +30,7 @@ target = "engine/controller.lua"
 pattern = 'if _card.ability.consumeable and G.consumeables and #G.consumeables.cards < G.consumeables.config.card_limit then'
 position = "before"
 payload = '''
-local debugplus = require("debugplus")
+local debugplus = require("debugplus-core")
 debugplus.handleSpawn(self, _card)
 '''
 match_indent = true
@@ -42,7 +42,7 @@ target = "functions/UI_definitions.lua"
 pattern = 'function create_UIBox_debug_tools()'
 position = "after"
 payload = '''
-local debugplus = require("debugplus")
+local debugplus = require("debugplus-core")
 debugplus.registerButtons()
 '''
 match_indent = true
@@ -106,7 +106,7 @@ overwrite = true
 [patches.module]
 source = "core.lua"
 before = "main.lua"
-name = "debugplus"
+name = "debugplus-core"
 
 # Console Stuff:
 
@@ -117,7 +117,7 @@ pattern = 'require "engine/object"'
 position = "before"
 payload = '''
 do
-    local debugplus = require("debugplus")
+    local debugplus = require("debugplus-core")
     debugplus.registerLogHandler()
 end
 '''
@@ -131,7 +131,7 @@ pattern = 'G:draw()'
 position = "after"
 payload = '''
 do
-    local debugplus = require("debugplus")
+    local debugplus = require("debugplus-core")
     debugplus.doConsoleRender()
 end
 '''
